@@ -16,6 +16,7 @@ package io.airlift.configuration;
 import com.google.inject.Binder;
 import com.google.inject.Module;
 
+import java.util.Optional;
 import java.util.function.Predicate;
 
 import static io.airlift.configuration.ConfigurationAwareModule.combine;
@@ -49,18 +50,32 @@ public class ConditionalModule<T>
                 conditionalModule(config, predicate.negate(), otherwise));
     }
 
+    public static <T> Module conditionalModule(Class<T> config, String prefix, Predicate<T> predicate, Module module, Module otherwise)
+    {
+        return combine(
+                conditionalModule(config, prefix, predicate, module),
+                conditionalModule(config, prefix, predicate.negate(), otherwise));
+    }
+
     public static <T> Module conditionalModule(Class<T> config, Predicate<T> predicate, Module module)
     {
-        return new ConditionalModule<>(config, predicate, module);
+        return new ConditionalModule<>(config, Optional.empty(), predicate, module);
+    }
+
+    public static <T> Module conditionalModule(Class<T> config, String prefix, Predicate<T> predicate, Module module)
+    {
+        return new ConditionalModule<>(config, Optional.of(prefix), predicate, module);
     }
 
     private final Class<T> config;
+    private final Optional<String> prefix;
     private final Predicate<T> predicate;
     private final Module module;
 
-    private ConditionalModule(Class<T> config, Predicate<T> predicate, Module module)
+    private ConditionalModule(Class<T> config, Optional<String> prefix, Predicate<T> predicate, Module module)
     {
         this.config = requireNonNull(config, "config is null");
+        this.prefix = requireNonNull(prefix, "prefix is null");
         this.predicate = requireNonNull(predicate, "predicate is null");
         this.module = requireNonNull(module, "module is null");
     }
@@ -68,7 +83,9 @@ public class ConditionalModule<T>
     @Override
     protected void setup(Binder binder)
     {
-        T configuration = buildConfigObject(config);
+        T configuration = prefix
+                .map(value -> buildConfigObject(config, value))
+                .orElseGet(() -> buildConfigObject(config));
         if (predicate.test(configuration)) {
             install(module);
         }
